--- a/src/create_folds.ipynb
+++ b/src/create_folds.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1247,37 +1247,19 @@
      "output_type": "stream",
      "text": [
       "Labels saved in: /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/ as labels.csv\n",
-      "Labels saved in: /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/ as labels.csv\n",
-      "No group identifier column specified, KFold will be used\n",
+      "No group identifier column specified, StratifiedKFold will be used\n",
       "5 folds created. To save the folds, call save_folds method.\n",
-      "No group identifier column specified, KFold will be used\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lukashat/miniforge3/envs/preprocess_benchmark/lib/python3.10/site-packages/sklearn/model_selection/_split.py:776: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 folds created. To save the folds, call save_folds method.\n",
-      "Folds saved in: /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/kfolds\n",
-      "Folds saved in: /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/kfolds\n"
+      "Folds saved in: /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/kfolds\n"
      ]
     }
    ],
    "source": [
     "aml.save_labels('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/')\n",
-    "bm.save_labels('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/')\n",
+    "#bm.save_labels('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/')\n",
     "aml.createKfold(k=5)\n",
-    "bm.createKfold(k=5)\n",
+    "#bm.createKfold(k=5)\n",
     "aml.save_folds('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/')\n",
-    "bm.save_folds('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/')"
+    "#bm.save_folds('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/')"
    ]
   },
   {
