--- a/src/preprocessing/process_cHL2.ipynb
+++ b/src/preprocessing/process_cHL2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +119,14 @@
        "      <th>CD45RO</th>\n",
        "      <th>CD28</th>\n",
        "      <th>...</th>\n",
-       "      <th>CD30</th>\n",
-       "      <th>TIM3</th>\n",
        "      <th>RORgT</th>\n",
        "      <th>TCRgd</th>\n",
        "      <th>CD86</th>\n",
        "      <th>CD25</th>\n",
        "      <th>Na-K ATPase</th>\n",
        "      <th>csv</th>\n",
+       "      <th>X_cent</th>\n",
+       "      <th>Y_cent</th>\n",
        "      <th>cellSize</th>\n",
        "      <th>cell_type</th>\n",
        "    </tr>\n",
@@ -148,11 +148,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.csv</td>\n",
+       "      <td>326</td>\n",
+       "      <td>2</td>\n",
        "      <td>13</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
@@ -172,11 +172,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.csv</td>\n",
+       "      <td>420</td>\n",
+       "      <td>2</td>\n",
        "      <td>23</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -196,11 +196,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000769</td>\n",
        "      <td>0.003703</td>\n",
        "      <td>1.csv</td>\n",
+       "      <td>1386</td>\n",
+       "      <td>2</td>\n",
        "      <td>21</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -220,11 +220,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.csv</td>\n",
+       "      <td>1436</td>\n",
+       "      <td>2</td>\n",
        "      <td>14</td>\n",
        "      <td>Endothelial</td>\n",
        "    </tr>\n",
@@ -244,11 +244,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.csv</td>\n",
+       "      <td>1452</td>\n",
+       "      <td>2</td>\n",
        "      <td>24</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
@@ -292,11 +292,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.004148</td>\n",
        "      <td>0.005979</td>\n",
        "      <td>6.csv</td>\n",
+       "      <td>2301</td>\n",
+       "      <td>2559</td>\n",
        "      <td>25</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -316,11 +316,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.004477</td>\n",
        "      <td>6.csv</td>\n",
+       "      <td>2351</td>\n",
+       "      <td>2559</td>\n",
        "      <td>40</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -340,11 +340,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.004282</td>\n",
        "      <td>6.csv</td>\n",
+       "      <td>2371</td>\n",
+       "      <td>2559</td>\n",
        "      <td>22</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -364,11 +364,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>6.csv</td>\n",
+       "      <td>2469</td>\n",
+       "      <td>2559</td>\n",
        "      <td>16</td>\n",
        "      <td>CD4 T</td>\n",
        "    </tr>\n",
@@ -388,17 +388,17 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.001431</td>\n",
        "      <td>0.004262</td>\n",
        "      <td>6.csv</td>\n",
+       "      <td>1812</td>\n",
+       "      <td>2559</td>\n",
        "      <td>16</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>230889 rows × 49 columns</p>\n",
+       "<p>230889 rows × 51 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -415,42 +415,53 @@
        "40448  0.000000   0.0  0.000000  0.000000  0.000524                0.0   \n",
        "40449  0.003643   0.0  0.000000  0.000000  0.000000                0.0   \n",
        "\n",
-       "          CD163  Histone H3    CD45RO      CD28  ...  CD30  TIM3  RORgT  \\\n",
-       "0      0.000000    0.077281  0.000000  0.000000  ...   0.0   0.0    0.0   \n",
-       "1      0.000000    0.167179  0.000000  0.000000  ...   0.0   0.0    0.0   \n",
-       "2      0.000000    0.176009  0.000106  0.000000  ...   0.0   0.0    0.0   \n",
-       "3      0.000000    0.077354  0.000000  0.000000  ...   0.0   0.0    0.0   \n",
-       "4      0.000000    0.182809  0.000000  0.000000  ...   0.0   0.0    0.0   \n",
-       "...         ...         ...       ...       ...  ...   ...   ...    ...   \n",
-       "40445  0.000000    0.136305  0.009310  0.000000  ...   0.0   0.0    0.0   \n",
-       "40446  0.009834    0.158602  0.002389  0.000000  ...   0.0   0.0    0.0   \n",
-       "40447  0.003010    0.209390  0.007215  0.000000  ...   0.0   0.0    0.0   \n",
-       "40448  0.040630    0.227213  0.003365  0.000000  ...   0.0   0.0    0.0   \n",
-       "40449  0.000000    0.091232  0.001600  0.000599  ...   0.0   0.0    0.0   \n",
+       "          CD163  Histone H3    CD45RO      CD28  ...  RORgT  TCRgd  CD86  \\\n",
+       "0      0.000000    0.077281  0.000000  0.000000  ...    0.0    0.0   0.0   \n",
+       "1      0.000000    0.167179  0.000000  0.000000  ...    0.0    0.0   0.0   \n",
+       "2      0.000000    0.176009  0.000106  0.000000  ...    0.0    0.0   0.0   \n",
+       "3      0.000000    0.077354  0.000000  0.000000  ...    0.0    0.0   0.0   \n",
+       "4      0.000000    0.182809  0.000000  0.000000  ...    0.0    0.0   0.0   \n",
+       "...         ...         ...       ...       ...  ...    ...    ...   ...   \n",
+       "40445  0.000000    0.136305  0.009310  0.000000  ...    0.0    0.0   0.0   \n",
+       "40446  0.009834    0.158602  0.002389  0.000000  ...    0.0    0.0   0.0   \n",
+       "40447  0.003010    0.209390  0.007215  0.000000  ...    0.0    0.0   0.0   \n",
+       "40448  0.040630    0.227213  0.003365  0.000000  ...    0.0    0.0   0.0   \n",
+       "40449  0.000000    0.091232  0.001600  0.000599  ...    0.0    0.0   0.0   \n",
        "\n",
-       "       TCRgd  CD86      CD25  Na-K ATPase    csv  cellSize    cell_type  \n",
-       "0        0.0   0.0  0.000000     0.000000  1.csv        13        Other  \n",
-       "1        0.0   0.0  0.000000     0.000000  1.csv        23        CD4 T  \n",
-       "2        0.0   0.0  0.000769     0.003703  1.csv        21        CD4 T  \n",
-       "3        0.0   0.0  0.000000     0.000000  1.csv        14  Endothelial  \n",
-       "4        0.0   0.0  0.000000     0.000000  1.csv        24        Other  \n",
-       "...      ...   ...       ...          ...    ...       ...          ...  \n",
-       "40445    0.0   0.0  0.004148     0.005979  6.csv        25        CD4 T  \n",
-       "40446    0.0   0.0  0.000000     0.004477  6.csv        40        CD4 T  \n",
-       "40447    0.0   0.0  0.000000     0.004282  6.csv        22        CD4 T  \n",
-       "40448    0.0   0.0  0.000000     0.000000  6.csv        16        CD4 T  \n",
-       "40449    0.0   0.0  0.001431     0.004262  6.csv        16        Other  \n",
+       "           CD25  Na-K ATPase    csv  X_cent  Y_cent  cellSize    cell_type  \n",
+       "0      0.000000     0.000000  1.csv     326       2        13        Other  \n",
+       "1      0.000000     0.000000  1.csv     420       2        23        CD4 T  \n",
+       "2      0.000769     0.003703  1.csv    1386       2        21        CD4 T  \n",
+       "3      0.000000     0.000000  1.csv    1436       2        14  Endothelial  \n",
+       "4      0.000000     0.000000  1.csv    1452       2        24        Other  \n",
+       "...         ...          ...    ...     ...     ...       ...          ...  \n",
+       "40445  0.004148     0.005979  6.csv    2301    2559        25        CD4 T  \n",
+       "40446  0.000000     0.004477  6.csv    2351    2559        40        CD4 T  \n",
+       "40447  0.000000     0.004282  6.csv    2371    2559        22        CD4 T  \n",
+       "40448  0.000000     0.000000  6.csv    2469    2559        16        CD4 T  \n",
+       "40449  0.001431     0.004262  6.csv    1812    2559        16        Other  \n",
        "\n",
-       "[230889 rows x 49 columns]"
+       "[230889 rows x 51 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocessing for STELLAR without coordinate drop\n",
+    "df.drop(columns=['Annotation_num', 'cellLabel'], inplace=True)\n",
+    "df.rename(columns={'Annotation': 'cell_type'}, inplace=True)"
    ]
   },
   {
